<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 By_syk

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">NanoIconPack</string>

    <string name="activity_about">About</string>
    <string name="activity_req_stats">Request stats</string>
    <string name="activity_whats_new">What\'s new</string>
    <string name="activity_search">Search</string>

    <string name="dlg_title_apply">Apply to launcher</string>
    <string name="dlg_title_set_key">Set your key</string>
    <string name="dlg_bt_got_it">Got it</string>
    <string name="dlg_bt_upload">Upload</string>
    <string name="dlg_bt_cancel">Cancel</string>
    <string name="dlg_bt_close">Close</string>
    <string name="dlg_bt_ok">OK</string>
    <string name="dlg_bt_donate_too">Donate, too</string>

    <string name="menu_whats_new">What\'s new</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_about">About</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_show_unmarked">Show unmarked</string>
    <string name="menu_show_marked">Show marked</string>
    <string name="menu_top">Top</string>
    <string name="menu_top_32">Top32</string>
    <string name="menu_top_64">Top64</string>
    <string name="menu_top_128">Top128</string>
    <string name="menu_mark">Mark matched</string>
    <string name="menu_undo_mark">Undo mark</string>
    <string name="menu_goto_market">View in market</string>
    <string name="menu_copy_code">Copy app code</string>
    <string name="menu_request_icon">Request icon</string>
    <string name="menu_save_icon">Save icon</string>
    <string name="menu_search">Search</string>

    <string name="nav_lost">Lost</string>
    <string name="nav_matched">Matched</string>
    <string name="nav_all">All</string>

    <string name="toast_not_installed">%s is not installed or it\'s disabled.</string>
    <string name="toast_code_copied">App code copied</string>
    <string name="toast_code_copy_failed">:( Failed to copy code</string>
    <string name="toast_icon_saved">Icon saved</string>
    <string name="toast_icon_save_failed">Failed to save the icon</string>
    <string name="toast_no_net_conn">:( No network connection</string>
    <string name="toast_no_net_no_req">:( Could not submit request because of lost network.</string>
    <string name="toast_icon_reqed">Icon requested</string>
    <string name="toast_icon_req_failed">:( Failed to request icon</string>
    <string name="toast_marked">Marked</string>
    <string name="toast_mark_failed">:( Failed to mark</string>
    <string name="toast_mark_undo">Cancelled mark</string>
    <string name="toast_mark_undo_failed">:( Failed to cancel mark</string>
    <string name="toast_whats_new">These icons are redrew, adjusted, or added into v%1$s.</string>
    <string name="toast_tap_save_icon">Tap again to save it to gallery.</string>
    <string name="toast_tap_send_to_home">Tap again to send it to home screen.</string>
    <string name="toast_failed_send_to_home">Sorry, could not add it to home screen.</string>
    <string name="toast_sent_to_home">Added to home screen</string>

    <string name="preference_category_icons">Icons (%d)</string>
    <string name="preference_icons_summary_note"></string>
    <string name="preference_icons_title_author">Icon pack author</string>
    <string name="preference_icons_summary_author">[@By_syk](copy:@By_syk)</string>
    <string name="preference_icons_title_contact">Contact author</string>
    <string name="preference_icons_summary_contact">[By_syk@163.com](email:By_syk@163.com)</string>
    <string name="preference_icons_title_todo_1"></string>
    <string name="preference_icons_summary_todo_1"></string>
    <string name="preference_icons_title_copyright">Copyright</string>
    <string name="preference_icons_summary_copyright">Copyright &#169; 2017 By_syk. All rights reserved.</string>
    <string name="preference_category_support">Donate &amp; support</string>
    <string name="preference_support_title_donate">Donate via Alipay</string>
    <string name="preference_support_summary_donate">[By_syk@163.com](alipay:https://qr.alipay.com/aex05154fiiurupx5ai0dd1|By_syk@163.com)</string>
    <string name="preference_support_title_todo_1"></string>
    <string name="preference_support_summary_todo_1"></string>
    <string name="preference_support_title_sponsors">Sponsors</string>
    <!-- What's "usr"? Visit http://nano.by-syk.com/page/donate to set it, and take care of it. -->
    <string name="preference_support_summary_sponsors">[Thank for donating.](usr:bysyk)</string>
    <string name="preference_category_app">APP</string>
    <string name="preference_app_title_app">@string/app_name</string>
    <string name="preference_app_summary_app">v%1$s (%2$d)</string>
    <string name="preference_app_title_todo_1"></string>
    <string name="preference_app_summary_todo_1"></string>
    <string name="preference_app_title_dashboard">Based on NanoIconPack v%s</string>
    <string name="preference_app_summary_dashboard" translatable="false">[https://github.com/by-syk/NanoIconPack](https://github.com/by-syk/NanoIconPack)</string>
    <string name="preference_category_dev">Development</string>
    <string name="preference_dev_title_stats">Request stats</string>
    <string name="preference_dev_title_query">Console</string>
    <string name="preference_dev_summary_query" translatable="false">[http://nano.by-syk.com](http://nano.by-syk.com/page/query)</string>

    <string name="send_code">Share app code&#8230;</string>
    <string name="cur_launcher">%s (Current)</string>
    <!--<string name="tips">Tips</string>-->
    <!--<string name="app_tap_desc">TAP one to request icon, and LONG PRESS to copy its code for development use.</string>-->
    <!--<string name="icon_tap_desc">TAP icon to view its detail, and LONG PRESS to save to gallery.</string>-->
    <string name="more_launchers_desc">Besides the listed, more launchers are supported, please try applying from launcher.</string>
    <string name="key_desc">Please enter a key for the system to recognize users.</string>
    <string name="prompt_req">Icon Request</string>
    <string name="prompt_req_desc">You could request icons in this page and the author will get it.</string>
    <string name="prompt_req_mark">To mark</string>
    <string name="prompt_req_add">To add</string>
    <string name="search_hint">Search icons&#8230;</string>

</resources>
