<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 By_syk

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="icons"
        android:title="@string/preference_category_icons">

        <Preference
            android:key="iconsNote"
            android:summary="@string/preference_icons_summary_note" />

        <Preference
            android:key="iconsAuthor"
            android:title="@string/preference_icons_title_author" />

        <Preference
            android:key="iconsContact"
            android:title="@string/preference_icons_title_contact" />

        <Preference
            android:key="iconsTodo1"
            android:title="@string/preference_icons_title_todo_1" />

        <Preference
            android:key="iconsCopyright"
            android:title="@string/preference_icons_title_copyright" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="support"
        android:title="@string/preference_category_support">

        <Preference
            android:key="supportDonate"
            android:title="@string/preference_support_title_donate" />

        <Preference
            android:key="supportTodo1"
            android:title="@string/preference_support_title_todo_1" />

        <Preference
            android:key="supportSponsors"
            android:title="@string/preference_support_title_sponsors" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app"
        android:title="@string/preference_category_app">

        <Preference
            android:key="appApp"
            android:title="@string/preference_app_title_app" />

        <Preference
            android:key="appTodo1"
            android:title="@string/preference_app_title_todo_1" />

        <Preference
            android:key="appDashboard"
            android:title="@string/preference_app_title_dashboard" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev"
        android:title="@string/preference_category_dev">

        <Preference
            android:key="devStats"
            android:title="@string/preference_dev_title_stats" />

        <Preference
            android:key="devQuery"
            android:title="@string/preference_dev_title_query" />

    </PreferenceCategory>

</PreferenceScreen>