<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 By_syk

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:paddingBottom="@dimen/unit_padding">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="18sp"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:gravity="center_vertical"
        android:paddingStart="16dp" />

    <LinearLayout
        android:id="@+id/view_menu_mark"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:src="?attr/ic_action_done"
            android:scaleType="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/positive"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1.0"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="32dp">

            <View
                android:id="@+id/view_hint_mark"
                android:background="@drawable/dot_green"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/unit_padding"
                android:layout_width="@dimen/unit_padding"
                android:layout_height="@dimen/unit_padding" />

            <TextView
                android:text="@string/menu_mark"
                android:textSize="18sp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:id="@+id/pb_marking"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_padding" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_menu_undo_mark"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:src="?attr/ic_action_undo"
            android:scaleType="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/negative"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1.0"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="32dp">

            <View
                android:id="@+id/view_hint_undo_mark"
                android:background="@drawable/dot_red"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/unit_padding"
                android:layout_width="@dimen/unit_padding"
                android:layout_height="@dimen/unit_padding" />

            <TextView
                android:text="@string/menu_undo_mark"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:id="@+id/pb_undo_marking"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_padding" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_menu_goto_market"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:src="?attr/ic_action_market"
            android:scaleType="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:text="@string/menu_goto_market"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="32dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_menu_copy_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:src="?attr/ic_action_code"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1.0"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="32dp">

            <View
                android:id="@+id/view_hint_lost"
                android:background="@drawable/dot_red"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/unit_padding"
                android:layout_width="@dimen/unit_padding"
                android:layout_height="@dimen/unit_padding" />

            <TextView
                android:text="@string/menu_copy_code"
                android:textSize="18sp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:id="@+id/pb_copy_code"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_padding" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>